<resources>
    <string name="app_name">Kiraaz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="or">Or</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_information">Profile Information</string>
    <string name="name_surname">Name-Surname</string>
    <string name="birthdate">Birthdate</string>
    <string name="city">City</string>
    <string name="next">Next</string>
    <string name="language">Language</string>
    <string name="sign_out">Sign Out</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="posts">Posts</string>
    <string name="gender">Gender</string>
    <string name="profile">Profile</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA44m1IAsPv5RO213apq6flFI2ZqPDHU9g</string>
</resources>