<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/profilePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/profile"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileIv2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePage"
            app:shapeAppearance="@style/circleImageView"
            app:strokeColor="#EFEFEF"
            app:strokeWidth="3dp" />

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/inter_semibold"
            android:text="Name Surname"
            android:textColor="?android:attr/textColorPrimary"

            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/profileIv2"
            app:layout_constraintStart_toEndOf="@+id/profileIv2"
            app:layout_constraintTop_toTopOf="@+id/profileIv2" />

        <TextView
            android:id="@+id/genderTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/inter"
            android:text="@string/gender"
            android:textColor="?android:attr/textColorPrimary"

            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/nameTv"
            app:layout_constraintTop_toBottomOf="@+id/nameTv" />

        <Button
            android:id="@+id/postBtn"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="2dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/round_post_add_24"
            android:drawableRight="@drawable/baseline_arrow_forward_ios_24"
            android:drawablePadding="16dp"
            android:drawableTint="?android:attr/textColorPrimary"
            android:fontFamily="@font/inter"
            android:padding="20dp"
            android:text="@string/posts"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="4dp"
            app:iconPadding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/themeBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileInfoBtn"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/profileInfoBtn"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="2dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/round_person_24"
            android:drawableRight="@drawable/baseline_arrow_forward_ios_24"
            android:drawablePadding="16dp"
            android:drawableTint="?android:attr/textColorPrimary"
            android:fontFamily="@font/inter"
            android:padding="20dp"
            android:text="@string/profile_information"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            app:cornerRadius="4dp"
            app:iconPadding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/postBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileIv2"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/themeBtn"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/white"
            android:drawableLeft="@drawable/round_dark_mode_24"
            android:drawableRight="@drawable/baseline_arrow_forward_ios_24"
            android:drawableTint="?android:attr/textColorPrimary"
            android:fontFamily="@font/inter"
            android:padding="20dp"
            android:text="@string/dark_mode"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            app:cornerRadius="4dp"
            app:iconPadding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/languageBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postBtn" />

        <Button
            android:id="@+id/languageBtn"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="2dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/round_language_24"
            android:drawableRight="@drawable/baseline_arrow_forward_ios_24"
            android:drawableTint="?android:attr/textColorPrimary"
            android:elevation="1dp"
            android:fontFamily="@font/inter"
            android:padding="20dp"
            android:text="@string/language"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="4dp"
            app:iconPadding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/signoutBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/themeBtn" />

        <Button
            android:id="@+id/signoutBtn"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/round_logout_24"
            android:drawableRight="@drawable/baseline_arrow_forward_ios_24"
            android:drawablePadding="16dp"
            android:drawableTint="?android:attr/textColorPrimary"
            android:fontFamily="@font/inter"
            android:padding="20dp"
            android:text="@string/sign_out"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="4dp"
            app:iconPadding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/languageBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>